--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">XtMapper</string>
+    <string name="start_touch_pointer">2-Start touch pointer</string>
+    <string name="run_script_info">Server not started</string>
+    <string name="start_server">1-Start server</string>
 </resources>
