--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="run_script_info">Server not started</string>
     <string name="start_server">1-Start server</string>
     <string name="start_server_manual">Start server (manual)</string>
+    <string name="stop_pointer_overlay">Stop Pointer overlay</string>
+    <string name="edit_keymap">Edit Keymap</string>
 </resources>
