--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">XtMapper</string>
-    <string name="start_touch_pointer">Start touch pointer</string>
-    <string name="run_script_info">Server not started</string>
+    <string name="start_touch_pointer">Overlay</string>
+    <string name="run_script_info">Server not started\n</string>
     <string name="start_server">Start server</string>
     <string name="start_server_manual">Start in terminal</string>
-    <string name="stop_pointer_overlay">Stop touch pointer</string>
+    <string name="configure">Select Input device</string>
     <string name="edit_keymap">Edit mode</string>
     <string name="about_info">About</string>
 </resources>
