Adjust Constraints in layout Improve stability Do not close app on server close; instead warn user set ioctl to prevent android cursor from conflicting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="configure">Select Input device</string>
     <string name="edit_keymap">Edit mode</string>
     <string name="about_info">About</string>
+    <string name="select_input_device">Select Input device</string>
 </resources>
