--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">XtMapper</string>
     <string name="start_touch_pointer">Overlay</string>
-    <string name="start_server">Start server</string>
-    <string name="start_server_manual">Start in terminal</string>
+    <string name="start_server">Activate</string>
+    <string name="start_server_manual">Activate with adb</string>
     <string name="configure">Select Input device</string>
     <string name="edit_keymap">Edit mode</string>
     <string name="about_info">About</string>
