Move to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="edit_keymap">Edit keymap</string>
     <string name="about_info">About</string>
     <string name="select_input_device">Select Input device</string>
+    <string name="current_profile">current profile: </string>
 </resources>
