--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,8 @@
     <string name="start_touch_pointer">Overlay</string>
     <string name="start_server">Activate with su</string>
     <string name="start_server_manual">Activate with adb</string>
-    <string name="configure">Select Input device</string>
+    <string name="configure">Settings</string>
     <string name="edit_keymap">Edit keymap</string>
     <string name="about_info">About</string>
-    <string name="select_input_device">Select Input device</string>
     <string name="current_profile">current profile: </string>
 </resources>
