--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,24 @@
     <string name="start_server_manual">Activate with adb</string>
     <string name="configure">Settings</string>
     <string name="edit_keymap">Edit keymap</string>
-    <string name="about">About</string>
+    <string name="help">Help</string>
     <string name="current_profile">current profile: </string>
     <string name="mouse_sensitivity">Mouse Sensitivity</string>
     <string name="dpad_radius">Dpad Radius</string>
     <string name="mouse_input_device">Mouse Input Device</string>
     <string name="about_info">
-        \n XtMapper: free and open source keymapper for Android. \n
+        \n XtMapper: Free and open source keymapper for Android. \n\n
 
-        \n GitHub: https://github.com/Xtr126/XtMapper \n
+        1. Activation \n\n
+        2. Use overlay button to start/stop service \n\n
+        3. When service running, drag down notification panel and click on notification to launch editor \n\n
+        4. Setup keymap according to touch controls in your game and save \n\n
+        5. There are two types of Dpad, one using WASD keys, another for arrow keys. \n
+        Add more dpads to change type. \n\n
+        6. Mouse right click or ~ key to activate shooting mode or aim with mouse for FPS games \n\n
 
-        \n License: GNU General Public License v3
+        \n License: GNU General Public License v3.0 \n
+        \n GitHub: https://github.com/Xtr126/XtMapper \n\n
     </string>
     <string name="mouse_aim_activated">
         Shooting mode activated Right click or ~ key to exit
