feat: Add pinch-to-zoom gesture simulation using ctrl key and mouse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,10 @@
         2. Use overlay button to start/stop service \n\n
         3. When service running, drag down notification panel and click on notification to launch editor \n\n
         4. Setup keymap according to touch controls in your game and save \n\n
-        5. There are two types of Dpad, one using WASD keys, another for arrow keys. \n
+        There are two types of Dpad, one using WASD keys, another for arrow keys. \n
         Add more dpads to change type. \n\n
-        6. Mouse right click or ~ key to activate shooting mode or aim with mouse for FPS games \n\n
+        Mouse right click or ~ key to activate shooting mode or aim with mouse for FPS games \n\n
+        Hold ctrl key and move mouse to simulate pinch-to-zoom gesture with two fingers. \n\n
 
         \n License: GNU General Public License v3.0 \n
         \n GitHub: https://github.com/Xtr126/XtMapper \n\n
