Add keyboard shortcuts to stop service/launch editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
         Shooting mode activated Right click or ~ key to exit
     </string>
     <string name="scroll_speed">Scroll Speed</string>
+    <string name="keyboard_shortcuts">Keyboard Shortcuts:</string>
+    <string name="launch_editor">Launch editor</string>
+    <string name="stop_service">Stop Service</string>
 </resources>
