--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="drag_mouse">Ctrl + Drag Mouse</string>
     <string name="mouse_wheel">Ctrl + Mouse Wheel</string>
     <string name="pinch_to_zoom_gesture_info">Two finger gesture with:</string>
+    <string name="dialog_alert_editor">
+        Service is not running. \n
+        You might not be able to map all key events. \n
+        Run Activation and try again.</string>
+    <string name="dialog_alert_editor_title" >Not Activated</string>
 </resources>
