--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,11 +31,9 @@
     </string>
     <string name="scroll_speed">Scroll Speed</string>
     <string name="keyboard_shortcuts">Keyboard Shortcuts:</string>
-    <string name="launch_editor">Launch editor</string>
-    <string name="stop_service">Stop Service</string>
     <string name="drag_mouse">Ctrl + Drag Mouse</string>
     <string name="mouse_wheel">Ctrl + Mouse Wheel</string>
-    <string name="pinch_to_zoom_gesture_info">Two finger gesture with:</string>
+    <string name="pinch_to_zoom_gesture_info">Perform two finger gesture with:</string>
     <string name="dialog_alert_editor">
         Service is not running. \n
         You might not be able to map all key events. \n
@@ -43,5 +41,9 @@
     <string name="dialog_alert_editor_title">Not Activated</string>
     <string name="dialog_alert_add_profile">Enter new profile name:</string>
     <string name="dialog_alert_select_profile">Select Profile</string>
+    <string name="key">Key</string>
+    <string name="switch_profile">Switch Profile</string>
+    <string name="launch_editor">Launch Editor</string>
+    <string name="stop_service">Stop Service</string>
 
 </resources>
