--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,12 +38,21 @@
         Service is not running. \n
         You might not be able to map all key events. \n
         Run Activation and try again.</string>
+
     <string name="dialog_alert_editor_title">Not Activated</string>
     <string name="dialog_alert_add_profile">Enter new profile name:</string>
     <string name="dialog_alert_select_profile">Select Profile</string>
+
     <string name="key">Key</string>
+
+
     <string name="switch_profile">Switch Profile</string>
     <string name="launch_editor">Launch Editor</string>
     <string name="stop_service">Stop Service</string>
+
+    <!-- bottom navigation in settings fragment -->
+    <string name="tuning">Tuning</string>
+    <string name="gestures">Gestures</string>
+    <string name="shortcuts">Shortcuts</string>
 
 </resources>
