--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">XtMapper</string>
-    <string name="start_touch_pointer">Overlay</string>
-    <string name="start_server">Activate with su</string>
-    <string name="start_server_manual">Activate with adb</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="auto_activate">Auto-Activate</string>
+    <string name="activation">Activation</string>
     <string name="configure">Settings</string>
     <string name="edit_keymap">Edit keymap</string>
     <string name="help">Help</string>
-    <string name="current_profile">current profile: </string>
+    <string name="package_name">package name: </string>
     <string name="mouse_sensitivity">Mouse Sensitivity</string>
     <string name="dpad_radius">Dpad Radius</string>
     <string name="mouse_input_device">Mouse Input Device</string>
