--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="tuning">Tuning</string>
     <string name="gestures">Gestures</string>
     <string name="shortcuts">Shortcuts</string>
+    <string name="activated_start">Activated \n Tap on start button</string>
 
 </resources>
