--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,7 @@
     <string name="drag_mouse">Ctrl + Drag Mouse</string>
     <string name="mouse_wheel">Ctrl + Mouse Wheel</string>
     <string name="mouse_aim">Mouse Aim</string>
+    <string name="cancel">@android:string/cancel</string>
+    <string name="ok">@android:string/ok</string>
 
 </resources>
