--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="auto_activate">Auto-Activate</string>
     <string name="activation">Activation</string>
     <string name="configure">Settings</string>
+    <string name="configurex">@android:string/selectAll</string>
     <string name="edit_keymap">Edit keymap</string>
     <string name="help">Help</string>
     <string name="package_name">package name: </string>
