feat: Add setting for adjusting swipe delay #10

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="mouse_aim">Mouse Aim</string>
     <string name="cancel">@android:string/cancel</string>
     <string name="ok">@android:string/ok</string>
+    <string name="swipe_delay_ms">Swipe delay in milliseconds</string>
 
 </resources>
