--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="cancel">@android:string/cancel</string>
     <string name="ok">@android:string/ok</string>
     <string name="swipe_delay_ms">Swipe delay in milliseconds</string>
+    <string name="profile_name">Profile Name</string>
 
 </resources>
