--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="mouse_aim">Mouse Aim</string>
     <string name="cancel">@android:string/cancel</string>
     <string name="ok">@android:string/ok</string>
-    <string name="swipe_delay_ms">Swipe delay in milliseconds</string>
+    <string name="swipe_delay_ms">Swipe delay %d milliseconds</string>
     <string name="profile_name">Profile Name</string>
 
 </resources>
