feat: add an option to disable auto profiling #53

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
 
     <!-- bottom navigation in settings fragment -->
     <string name="tuning">Tuning</string>
-    <string name="gestures">Gestures</string>
+    <string name="config">Config</string>
     <string name="shortcuts">Shortcuts</string>
     <string name="activated_start">Activated \n Tap on start button</string>
 
@@ -67,5 +67,6 @@
     <string name="profile_name">Profile Name</string>
     <string name="root_not_found_title">Root access not found</string>
     <string name="root_not_found_message">Root access is required for the keymapper to function. \n Please grant root access to XtMapper from KernelSU manager app:</string>
+    <string name="disable_auto_profile">Disable auto profiling</string>
 
 </resources>
