--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
     <string name="root_not_found_title">Root access not found</string>
     <string name="root_not_found_message">Root access is required for the keymapper to function. \n Please grant root access to XtMapper from KernelSU manager app:</string>
     <string name="disable_auto_profile">Disable auto profiling</string>
+    <string name="touchpad_input">Touchpad Input</string>
 
 </resources>
