--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,12 @@
     <string name="swipe_delay_ms">Swipe delay %d milliseconds</string>
     <string name="profile_name">Profile Name</string>
     <string name="root_not_found_title">Root access not found</string>
-    <string name="root_not_found_message">Root access is required for the keymapper to function. \n Please grant root access to XtMapper from KernelSU manager app:</string>
+    <string name="root_not_found_message">Root access is required for the keymapper to function. \n Please grant superuser to XtMapper from KernelSU manager app:</string>
+    <string name="root_no_privileges_title">Service failed to start as root</string>
+    <string name="root_no_privileges_message">
+        Unable to obtain privileges. Do you want to exit the application?\n
+        If you already granted superuser privileges, it might work after exiting and opening the app.
+    </string>
     <string name="disable_auto_profile">Disable auto profiling</string>
     <string name="touchpad_input">Touchpad Input</string>
     <string name="launch_app">Launch App</string>
