feat: add setting for switching pointer mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="touchpad_input">Touchpad Input</string>
     <string name="launch_app">Launch App</string>
     <string name="use_shizuku">Use Shizuku</string>
+    <string name="pointer">Pointer Mode</string>
 
 </resources>
