refactor: Use string arrays for drop-down menus to support locales

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -69,4 +69,18 @@
     <string name="add_key">添加键</string>
     <string name="save">保存</string>
 
+    <!--  Mouse Aim  -->
+    <string name="toggle">Toggle</string>
+    <string name="hold">Hold</string>
+
+    <!--  Pointer Mode  -->
+    <string name="combined">Combined</string>
+    <string name="overlay">Overlay</string>
+    <string name="system">System</string>
+
+    <!--  Touchpad  -->
+    <string name="relative">Relative</string>
+    <string name="disabled">Disabled</string>
+    <string name="direct">Direct</string>
+
 </resources>
