feat: New profiles view layout for MainActivity

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -100,4 +100,7 @@
     <string name="export_selected">تصدير المحدد</string>
     <string name="select_all">تحديد الكل</string>
     <string name="import_button">استيراد</string>
+    <string name="rename">Rename</string>
+    <string name="delete">Delete</string>
+    <string name="enabled">Enabled</string>
 </resources>
