--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -103,4 +103,6 @@
     <string name="enabled">Enabled</string>
     <string name="no_profile_selected">No profile selected</string>
     <string name="select_profile_from_below">Tap on a profile from the list below to select it</string>
+    <string name="detected_shizuku">Detected Shizuku</string>
+    <string name="use_shizuku_for_activation">Use Shizuku for activation?</string>
 </resources>
